en ésta oportunidad se agruparon los contenidos tanto de la carta del restaurante con la de tragos en la pagina carta, y se creó una nueva página con informacion sobre nosotros que luego se ampliará

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-center " id="navbarNav">
+                    <div class="collapse navbar-collapse d-flex justify-content-center " id="navbarNav">
                         <ul class="barraNav navbar-nav">
                             <li class="nav-item "><a class="botonesNav" href="./pages/cafeteria.html">Cafetería</a></li>
-                            <li class="nav-item "><a class="botonesNav" href="./pages/tragos.html">Tragos</a></li>
+                            <li class="nav-item "><a class="botonesNav" href="./pages/sobreNosotros.html">Nosotros</a></li>
                             <li class="nav-item "><a class="botonesNav" href="#">Inicio</a></li>
-                            <li class="nav-item "><a class="botonesNav" href="./pages/restaurante.html">Restaurante</a></li>
+                            <li class="nav-item "><a class="botonesNav" href="./pages/Carta.html">Carta.EDRB</a></li>
                             <li class="nav-item "><a class="botonesNav" href="./pages/carrito.html">Carrito</a></li>
                         </ul>
                     </div>
@@ -43,7 +43,7 @@
     
                     <div class="col-md-4 ">
                         <div class="text-center">
-                            <img class="logoPrincipal rounded " src="./assets/img/edLogo.png" alt="Logo">
+                            <img class="logoPrincipalCentral rounded " src="./assets/img/edLogo.png" alt="Logo">
                         </div>
                     </div>
     
