en éste commit se solucionan los márgenes de los registros de la página de inicio y de la página Sobre Nosotros

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <!-- Formulario de Registro a la página del Restobar -->
                 <h3 class="cabeceraRegistro">Registrarse</h3>
 
-                <div>
+                <div class="padreFlex">
                     <input type="text" placeholder="Apellidos y Nombre" class="registroIndex">
     
                     <input type="email" placeholder="alguien@gmail.com" class="registroIndex">
