--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -94,13 +94,15 @@
             <h3 class="cabeceraRegistro">Registrarse</h3>
             <h4 class="nosotrosRegistro">Registrate si querés recibir información sobre la novedades del restobar</h4>
 
-            <input type="text" placeholder="Apellidos y Nombre" class="registroIndex">
+            <div class="padreFlex">
+                <input type="text" placeholder="Apellidos y Nombre" class="registroIndex">
 
-            <input type="email" placeholder="alguien@gmail.com" class="registroIndex">
+                <input type="email" placeholder="alguien@gmail.com" class="registroIndex">
 
-            <input type="password" placeholder="Contraseña" class="registroIndex">
+                <input type="password" placeholder="Contraseña" class="registroIndex">
 
-            <input type="button" value="REGISTRARSE" class="registroIndex botonRegistrarse">
+                <input type="button" value="REGISTRARSE" class="registroIndex botonRegistrarse">
+            </div>
 
         </form>
 
