en este commit se linkea la pagina de error 404

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -101,7 +101,7 @@
 
                 <input type="password" placeholder="Contraseña" class="registroIndex">
 
-                <input type="button" value="REGISTRARSE" class="registroIndex botonRegistrarse">
+                <a href="./404.html"><input type="button" value="REGISTRARSE" class="registroIndex botonRegistrarse"></a>
             </div>
 
         </form>
