--- a/pages/404.html
+++ b/pages/404.html
@@ -19,7 +19,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-center " id="navbarNav">
                         <ul class="barraNav navbar-nav">
-                            <li class="nav-item "><a class="botonesNav" href="#">Cafetería</a></li>
+                            <li class="nav-item "><a class="botonesNav" href="./cafeteria.html">Cafetería</a></li>
                             <li class="nav-item "><a class="botonesNav" href="./sobreNosotros.html">Nosotros</a></li>
                             <li class="nav-item "><a class="botonesNav" href="../index.html">Inicio</a></li>
                             <li class="nav-item "><a class="botonesNav" href="./Carta.html">Carta.EDRB</a></li>
