--- a/pages/Carta.html
+++ b/pages/Carta.html
@@ -102,7 +102,7 @@
                     <div class="flexItems">
                         <img class="tamañoImagen" src="../assets/img/papasFritas.jpg" alt="papas fritas"> 
                         <p class="textoDemostracion">PAPAS FRITAS $$$</p>
-                        <p class="textoDemostracionDescripción">Deliciosas papas fritas recién hechas, crujientes por fuera y tiernas por dentro. Perfectamente sazonadas con una pizca de sal para realzar su sabor natural. Una adicción irresistible que te hará disfrutar de cada bocado.</p>
+                        <p class="textoDemostracionDescripción">Deliciosas papas fritas recién hechas, crujientes por fuera y tiernas por dentro. Perfectamente sazonadas con una pizca de sal para realzar su sabor natural. Una adicción irresistible que te hará disfrutar de cada bocado rebosante de sabor.</p>
                     </div>
                 </div>
             </button>
