--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -113,7 +113,7 @@
                     <div class="flexItems">
                         <img class="tamañoImagen" src="../assets/img/espresso.jpg" alt="espresso"> 
                         <p class="textoDemostracion">ESPRESSO $$$</p>
-                        <p class="textoDemostracionDescripción">Espresso, el corazón y alma del café. Un tiro de café concentrado y audaz, elaborado con granos finamente molidos y agua caliente presurizada. Cada taza es puro placer para los sentidos, entregando una experiencia intensa y refinada. Una bebida pequeña pero intensamente sabrosa y aromática</p>
+                        <p class="textoDemostracionDescripción">Espresso, el corazón y alma del café. Un tiro de café concentrado y audaz, elaborado con granos finamente molidos y agua caliente presurizada. Cada taza es puro placer para los sentidos, entregando una experiencia intensa y refinada. Una bebida pequeña pero intensa.</p>
                     </div>
                 </div>
                 
